--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-pyvips==2.2.1
-tqdm==4.65.0
+numpy==1.26.4
+openslide-python==1.3.1
+pydicom==2.4.4
+pyvips==2.2.3
+tifffile==2024.5.22
+tifftools==1.5.2
+tqdm==4.66.4
+zarr==2.18.2
